# delicate

./: .gitattributes  .gitignore  CHANGELOG.md  CODE_OF_CONDUCT.md  CONTRIBUTING.md  Cargo.toml  Dockerfile  LICENSE-MIT  README.md  README_zhCN.md  migrate_to_poem..md  migrate_to_poem_en.md  migrate_to_poem_zh_cn.md  rbac_model.conf  rbac_policy.csv  rbac_with_hierarchy_policy.csv  rustfmt.toml  template.env
.cargo/: docker_dev_cargo_config.toml  docker_release_cargo_config.toml
.github/: FUNDING.yml  PULL_REQUEST_TEMPLATE.md
.github/workflows/: rust.yml
delicate-actuator/: Cargo.toml
delicate-actuator/proto/: actuator.proto  helloworld.proto
delicate-actuator/proto/generated_codes/: delicate.actuator.rs
delicate-actuator/src/: main.rs  prelude.rs
delicate-actuator/tests/: client.rs
delicate-executor/: Cargo.toml
delicate-executor/src/: component.rs  main.rs  prelude.rs
delicate-scheduler/: Cargo.toml  diesel_mysql.toml  diesel_postgres.toml  template.env
delicate-scheduler/delicate-scheduler/src/db/mysql/: schema.rs
delicate-scheduler/migrations/mysql/2021-04-12-092126_create_posts/: up.sql
delicate-scheduler/migrations/mysql/2021-04-15-123323_init/: down.sql  up.sql
delicate-scheduler/migrations/mysql/2021-07-27-110601_rich_logs/: down.sql  up.sql
delicate-scheduler/migrations/mysql/2021-09-08-084754_casbin_auth/: down.sql  up.sql
delicate-scheduler/migrations/mysql/2021-11-15-092355_actuator/: down.sql  up.sql
delicate-scheduler/migrations/postgres/2021-04-14-141636_posts/: up.sql
delicate-scheduler/src/: error.rs  main.rs  prelude.rs  schema.rs
delicate-scheduler/src/actions/: components.rs  data_reports.rs  executor_group.rs  executor_processor.rs  executor_processor_bind.rs  mod.rs  operation_log.rs  role.rs  task.rs  task_instance.rs  task_log.rs  user.rs  user_login_log.rs
delicate-scheduler/src/actions/components/: binding.rs  executor.rs  mod.rs  permission.rs
delicate-scheduler/src/components/: base.rs  health_checker.rs  helper.rs  logger_id.rs  mod.rs  operation_log_consumer.rs  security.rs  session.rs  uniform_data.rs
delicate-scheduler/src/components/auth/: casbin.rs  mod.rs
delicate-scheduler/src/components/auth/casbin/: casbin_event_consumer.rs  casbin_rule_consumer.rs  middleware.rs  mod.rs
delicate-scheduler/src/components/auth/casbin/adapter/: actions.rs  adapter_core.rs  macros.rs  mod.rs  models.rs  schema.rs
delicate-scheduler/src/db/: migrate.rs  mod.rs
delicate-scheduler/src/db/common/: helper.rs  mod.rs  model.rs  state.rs  types.rs
delicate-scheduler/src/db/common/state/: mod.rs
delicate-scheduler/src/db/mysql/: extension.rs  mod.rs  model.rs  schema.rs
delicate-scheduler/src/db/mysql/model/: casbin_rule.rs  data_reports.rs  executor_group.rs  executor_processor.rs  executor_processor_bind.rs  mod.rs  operation_log.rs  task.rs  task_bind.rs  task_log.rs  user.rs  user_login_log.rs
delicate-scheduler/src/db/postgres/: mod.rs
delicate-scheduler/src/macros/: feature_cfg.rs  helper.rs  mod.rs
delicate-utils/: Cargo.toml
delicate-utils/proto/: actuator.health.proto  actuator.proto
delicate-utils/proto/generated_codes/: delicate.actuator.health.rs  delicate.actuator.rs
delicate-utils/src/: error.rs  lib.rs  prelude.rs  uniform_data.rs
delicate-utils/src/consensus_message/: actuator.rs  executor_processor.rs  health_check.rs  mod.rs  security.rs  service_binding.rs  task.rs  task_log.rs
delicate-utils/src/helper_structure/: byte_buf.rs  mod.rs
delicate-utils/src/helper_utils/: metrics.rs  mod.rs
delicate-web/: .umirc.js  CONTRIBUTING.md  README-zh_CN.md  README.md  manifest.json  package.json
delicate-web/docs/: README.md  deploy.md  getting-started.md  index.html
delicate-web/docs/zh-cn/: README.md  deploy.md
delicate-web/mock/: _utils.js  dashboard.js  route.js  user.js
delicate-web/src/components/Layout/: Bread.js  Header.js  Menu.js
delicate-web/src/components/Loader/: Loader.js
delicate-web/src/layouts/: PrimaryLayout.js
delicate-web/src/locales/zh/: messages.json
delicate-web/src/models/: app.js
delicate-web/src/pages/: 404.tsx
delicate-web/src/pages/dashboard/: index.js  model.js
delicate-web/src/pages/dashboard/components/: completed.js  sales.js
delicate-web/src/pages/editor/: index.js
delicate-web/src/pages/executor/: index.js
delicate-web/src/pages/executor/components/: Filter.js  List.js  Modal.js
delicate-web/src/pages/executor/models/: executor.js
delicate-web/src/pages/executorGroup/: index.js
delicate-web/src/pages/executorGroup/[id]/: index.js
delicate-web/src/pages/executorGroup/components/: Filter.js  List.js  Modal.js
delicate-web/src/pages/executorGroup/models/: executorGroup.js
delicate-web/src/pages/inLogs/: index.js  model.js
delicate-web/src/pages/login/: index.js  model.js
delicate-web/src/pages/operateLogs/: index.js  model.js
delicate-web/src/pages/operateLogs/[id]/: index.js
delicate-web/src/pages/personalCenter/: index.js
delicate-web/src/pages/post/: model.js
delicate-web/src/pages/post/components/: List.js
delicate-web/src/pages/request/: index.js
delicate-web/src/pages/taskList/: index.js  index.jsx  model.js
delicate-web/src/pages/user/: index.js  model.js
delicate-web/src/services/: api.js  index.js
delicate-web/src/utils/: config.js  data.js  envConfig.js  iconMap.js  iconMap.jsx  model.js  request.js
doc/: Roadmap.md  book.toml  entries.md  issue_zh_cn.md  permission-lib-selection.md  promotional_doc.md  promotional_doc_zh_cn.md  quick_start.md  quick_start_zh_cn.md  reference.md
doc/src/: Roadmap.md  SUMMARY.md  entries.md  issue_zh_cn.md  permission_zh_cn.md  promotional_doc.md  quick_start_zh_cn.md
doc/src/_media/raw/: delicate-behavior-log-consumer.excalidraw  delicate-permissions-ajustment-detail.excalidraw  delicate-permissions-ajustment.excalidraw
doc/src/change-log/: centralized_scheduling.md  migrate_to_poem_en.md  migrate_to_poem_zh_cn.md
doc/src/delicate-web/: README.md  deploy.md  faq.md
doc/src/delicate-web/zh-cn/: API-configuration.md  faq.md  getting-started.md
(+9 files in other folders)
