[package]
name = "delicate-actuator"
version = "0.1.0"
authors = ["BinChengZhao <binchengZhao@outlook.com>"]
edition = "2018"
build = "build/build.rs"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
tonic = "0.5"
prost = "0.8.0"
prost-types = "0.8.0"
delicate-utils = { path = "../delicate-utils" }


[build-dependencies]
tonic-build = "0.5"