[package]
name = "delicate-executor"
version = "0.1.0"
authors = ["BinChengZhao <binchengZhao@outlook.com>"]
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
anyhow = "^1.0.38"
futures = "^0.3"
json = "^0.12.4"
serde = { version = "^1.0", features = ["derive"] }
serde_json = "^1.0.62"


delicate-utils = { path = "../delicate-utils" }