[package]
name = "delicate-scheduler"
version = "0.1.0"
authors = ["BinChengZhao <binchengZhao@outlook.com>"]
readme = "README.md"
edition = "2018"
build = "build/build.rs"
homepage = "https://github.com/BinChengZhao/delicate"
repository = "https://github.com/BinChengZhao/delicate"
keywords = ["scheduler", "cron", "distributed"]
documentation = ""


# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
sysinfo = "^0.16.5"
delay_timer = {version = "^0.6.0", features = ["full"]}
actix-web = "^3.3.2"
actix-session = "0.4.1"
serde = { version = "^1.0", features = ["derive"] }
serde_json = "^1.0.62"
diesel = { version = "^1.4.6", features = ["postgres", "mysql", "extras", "r2d2", "chrono"] }
diesel_migrations = "^1.4.0"
dotenv = "^0.15.0"
anyhow = "^1.0.38"
thiserror = "1.0.25"
tracing = "0.1.26"
tracing-subscriber = "0.2.19"
futures = "^0.3.14"
chrono = { version = "^0.4", features = ["serde"]}
ring = "^0.16.20"
rsa = { version = "^0.4.0", features = ["std", "pem" ,"serde"] }
validator = { version = "^0.13", features = ["phone", "derive"] }
cached = "^0.23.0"
derive_more = "^0.99.14"
actix-cors = "^0.5.4"
delicate-utils = { path = "../delicate-utils" }

[dev-dependencies]
rand = "^0.8.3"


[build-dependencies]
autocfg = "1"
dotenv = "0.15.0"