[package]
name = "delicate-scheduler"
version = "0.1.0"
authors = ["BinChengZhao <binchengZhao@outlook.com>"]
readme = "README.md"
edition = "2018"
build = "build/build.rs"
homepage = "https://github.com/BinChengZhao/delicate"
repository = "https://github.com/BinChengZhao/delicate"
keywords = ["scheduler", "cron", "distributed"]
documentation = ""


# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
actix-web = "^3.3.2"
actix-session = "0.4.1"
async-channel = "1.6.1"
async-lock = "^2.4.0"
async-trait = "0.1.51"
anyhow = "^1.0.38"
awc = { version = "2.0.3", default-features = false }
concat-idents = "1.1.3"
cached = "^0.23.0"
chrono = { version = "^0.4", features = ["serde"]}
derive_more = "^0.99.14"
delicate-utils = { path = "../delicate-utils" }
diesel_migrations = "^1.4.0"
diesel = { version = "^1.4.6", features = ["postgres", "mysql", "extras", "r2d2", "chrono"] }
dotenv = "^0.15.0"
futures = "^0.3.14"
lazy_static = "1.4.0"
regex = "^1.5.4"
ring = "^0.16.20"
rsa = { version = "^0.4.0", features = ["std", "pem" ,"serde"] }
sysinfo = "^0.16.5"
strum = "0.21.0"
strum_macros = "0.21"
serde_json = "^1.0.62"
serde = { version = "^1.0", features = ["derive"] }
thiserror = "1.0.25"
validator = { version = "^0.13", features = ["phone", "derive"] }

[features]
default = []

[dev-dependencies]
rand = "^0.8.3"


[build-dependencies]
autocfg = "1"
dotenv = "0.15.0"