[package]
name = "delicate-utils"
version = "0.1.0"
authors = ["BinChengZhao <binchengZhao@outlook.com>"]
edition = "2018"

[lib]
name = "delicate_utils"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
log = "^0.4"
rand = "^0.8.3"
ring = "^0.16.20"
thiserror = "1.0.25"
actix-web = "^3.3.2"
actix-session = "0.4.1"
serde_json = "^1.0.62"
derive_more = "^0.99.14"
serde = { version = "^1.0", features = ["derive"] }
rsa = { version = "^0.4.0", features = ["std", "pem" ,"serde"] }
diesel = { version = "^1.4.6", features = ["postgres", "mysql", "extras", "r2d2", "chrono"] }


[dev-dependencies]
